# welltime

./: .env.example  .gitignore  README.md  SELL_PAGE.md  SETUP.md  SPECIFICATION.md  debug-storage.html  index.html  openclaw.plugin.json  package-lock.json  package.json  sell-page.html  visual-prototype.jsx  vite.config.ts
.claude/skills/clawkeeper/: SKILL.md
cli/: cli.test.ts  main.ts  operations.test.ts  operations.ts  storage.test.ts  storage.ts  vitest.config.ts
skills/clawkeeper/: SKILL.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/src/: main.rs
src/components/: AddHabitRow.tsx  AddTaskRow.tsx  ChatPanel.tsx  HabitItem.test.tsx  HabitItem.tsx  HabitsSection.tsx  SplashScreen.tsx  TaskItem.test.tsx  TaskItem.tsx  TasksSection.tsx  UndoBar.tsx
src/hooks/: useCoachMessage.ts
src/lib/: claude.ts  constants.ts  exampleData.ts  markdown.test.ts  markdown.ts  storage.ts  types.ts  utils.ts
src/styles/: index.css
